[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/pages/main_menu/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/main.gd" type="Script" id=2]
[ext_resource path="res://ui/pages/options/options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/KRASHWORLD_FX_SONG3.ogg" type="AudioStream" id=4]
[ext_resource path="res://ui/pages/game_hud/game_hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/video/AfterLevel2.ogv" type="VideoStream" id=6]
[ext_resource path="res://ui/standard_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/collect_01.ogg" type="AudioStream" id=8]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ClickBlocker" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="GameHUD" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Options" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Video" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VideoPlayer" type="VideoPlayer" parent="CanvasLayer/Video/AspectRatioContainer"]
unique_name_in_owner = true
margin_left = 200.0
margin_right = 800.0
margin_bottom = 600.0
mouse_filter = 2
stream = ExtResource( 6 )
volume_db = -6.37

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_bottom = 50

[node name="SkipVideo" parent="CanvasLayer/Video/MarginContainer" instance=ExtResource( 7 )]
margin_left = 440.0
margin_top = 509.0
margin_right = 560.0
margin_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureRect" parent="CanvasLayer/Video/MarginContainer/SkipVideo/Scaler" index="0"]
rect_min_size = Vector2( 120, 41 )

[node name="Label" parent="CanvasLayer/Video/MarginContainer/SkipVideo/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 120.0
text = "Skip"

[node name="GameEnd" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameEnd"]
margin_right = 1000.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameEnd"]
margin_right = 1000.0
margin_bottom = 600.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameEnd/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 500.0

[node name="Credits" type="MarginContainer" parent="CanvasLayer/GameEnd/MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 355.0
size_flags_vertical = 3

[node name="GameEndButton" parent="CanvasLayer/GameEnd/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_left = 300.0
margin_top = 359.0
margin_right = 500.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 41 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" parent="CanvasLayer/GameEnd/MarginContainer/VBoxContainer/GameEndButton/Scaler" index="0"]
rect_min_size = Vector2( 200, 41 )

[node name="Label" parent="CanvasLayer/GameEnd/MarginContainer/VBoxContainer/GameEndButton/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 200.0
text = "Go to Level 1"

[node name="Failed" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Failed"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 500.0
custom_constants/separation = 100

[node name="Control" type="Control" parent="CanvasLayer/Failed/VBoxContainer"]
margin_right = 800.0
margin_bottom = 128.0
size_flags_vertical = 3

[node name="TimerLabel" type="Label" parent="CanvasLayer/Failed/VBoxContainer"]
unique_name_in_owner = true
margin_left = 248.0
margin_top = 228.0
margin_right = 552.0
margin_bottom = 259.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_colors/font_color = Color( 0.0862745, 0.54902, 0.337255, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "YOU RAN OUT  OF TIME!"

[node name="ResetLevelButton" parent="CanvasLayer/Failed/VBoxContainer" instance=ExtResource( 7 )]
margin_left = 275.0
margin_top = 359.0
margin_right = 525.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 41 )
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureRect" parent="CanvasLayer/Failed/VBoxContainer/ResetLevelButton/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="CanvasLayer/Failed/VBoxContainer/ResetLevelButton/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "RESET GAME"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="WorldContainer" type="Spatial" parent="."]
unique_name_in_owner = true

[node name="LevelContainer" type="Spatial" parent="WorldContainer" groups=["level_container"]]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 4 )
volume_db = -8.047
bus = "Music"

[node name="CollectSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 8 )
volume_db = 12.431
bus = "Filter"

[connection signal="finished" from="CanvasLayer/Video/AspectRatioContainer/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="CanvasLayer/Video/MarginContainer/SkipVideo" to="." method="_on_SkipVideo_pressed"]
[connection signal="pressed" from="CanvasLayer/GameEnd/MarginContainer/VBoxContainer/GameEndButton" to="." method="_on_GameEndButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Failed/VBoxContainer/ResetLevelButton" to="." method="_on_ResetLevelButton_pressed"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]

[editable path="CanvasLayer/Video/MarginContainer/SkipVideo"]
[editable path="CanvasLayer/GameEnd/MarginContainer/VBoxContainer/GameEndButton"]
[editable path="CanvasLayer/Failed/VBoxContainer/ResetLevelButton"]
